<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasksFragment.TasksFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:background="?attr/colorSurfaceContainerLow"
        android:id="@+id/tbTasks"
        style="@style/BaseToolBarStyle.Centered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_task_menu"
        app:title="@string/nav_title_tasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbTasks" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_add"
        android:src="@drawable/ic_fab_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mlCalendarMotion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layoutDescription="@xml/fragment_tasks_scene"
        app:layout_constraintBottom_toTopOf="@id/fabAddTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbTasks">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/calendarCard"
            style="@style/BaseCardViewStyle.Outlined"
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CalendarView
            android:id="@+id/cvCalendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/calendarCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivIconOpenCalendar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/cd_calendar"
            android:padding="14dp"
            android:src="@drawable/ic_calendar_menu"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/calendarCard"
            app:layout_constraintEnd_toEndOf="@id/calendarCard" />

        <ImageView
            android:id="@+id/ivIconCloseCalendar"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:padding="24dp"
            android:contentDescription="@string/cd_close"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/cvCalendar"
            app:layout_constraintStart_toStartOf="@id/cvCalendar" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabToToday"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fab_today"
        app:icon="@drawable/ic_fab_today"
        app:layout_constraintBottom_toBottomOf="@+id/fabAddTask"
        app:layout_constraintEnd_toStartOf="@+id/fabAddTask"
        app:layout_constraintTop_toTopOf="@+id/fabAddTask" />

</androidx.constraintlayout.widget.ConstraintLayout>